tests/snapshots/validation__arista_eos_show_version_eos_4_standard.snap
---
source: tests/validation.rs
expression: results.clone()
---
- model: DCS-7050SX-64-R
  serial: SSJ12345678
  uptime: "42 weeks, 3 days, 14 hours and 23 minutes"
  version: 4.24.2F
