tests/snapshots/validation__arista_eos_show_version_malformed_model.snap
---
source: tests/validation.rs
expression: records
---
- model: ""
  serial: JPE12345678
  uptime: "15 weeks, 3 days, 8 hours, 22 minutes"
  version: 4.22.0F
