tests/snapshots/validation__arista_eos_show_version_truncated.snap
---
source: tests/validation.rs
expression: records
---
- model: DCS-7050SX-128
  serial: JPE12345678
  uptime: ""
  version: 4.22.0F
