tests/snapshots/validation__cisco_ios_show_interfaces_ios_15_standard.snap
---
source: tests/validation.rs
expression: results.clone()
---
- bandwidth: 1000000
  description: Uplink to Core Switch
  interface: GigabitEthernet0/1
  mtu: 1500
  protocol: up
  status: up
- bandwidth: 100000
  description: ""
  interface: FastEthernet0/1
  mtu: 1500
  protocol: down
  status: down
- bandwidth: 1000000
  description: Management VLAN
  interface: Vlan1
  mtu: 1500
  protocol: up
  status: up
