tests/snapshots/validation__cisco_ios_show_interfaces_missing_status.snap
---
source: tests/validation.rs
expression: records
---
- bandwidth: 1000000
  description: Invalid interface format
  interface: ""
  mtu: 1500
  protocol: ""
  status: ""
