tests/snapshots/validation__cisco_ios_show_interfaces_truncated.snap
---
source: tests/validation.rs
expression: records
---
- bandwidth: ""
  description: Uplink to Core
  interface: GigabitEthernet0/1
  mtu: ""
  protocol: up
  status: up
