tests/snapshots/validation__cisco_ios_show_version_invalid_uptime.snap
---
source: tests/validation.rs
expression: records
---
- hostname: Router1
  model: WS-C2960-48TT-L
  serial: ""
  uptime: not a valid uptime format
  version: "15.0(2)SE11,"
