tests/snapshots/validation__cisco_ios_show_version_ios_12_legacy.snap
---
source: tests/validation.rs
expression: results.clone()
---
- hostname: DC-SWITCH-01
  model: WS-C3560G-24TS
  serial: ":"
  uptime: "3 years, 28 weeks, 4 days, 17 hours, 22 minutes"
  version: "12.2(55)SE12,"
