tests/snapshots/validation__cisco_ios_show_version_ios_15_standard.snap
---
source: tests/validation.rs
expression: results.clone()
---
- hostname: SW-CORE-01
  model: WS-C2960-48TT-L
  serial: ":"
  uptime: "5 weeks, 2 days, 3 hours, 45 minutes"
  version: "15.0(2)SE11,"
