tests/snapshots/validation__cisco_ios_show_version_malformed_version.snap
---
source: tests/validation.rs
expression: records
---
- hostname: Router1
  model: WS-C2960-48TT-L
  serial: ""
  uptime: "5 weeks, 2 days, 3 hours, 45 minutes"
  version: ""
