tests/snapshots/validation__cisco_ios_show_version_truncated.snap
---
source: tests/validation.rs
expression: records
---
- hostname: Router1
  model: ""
  serial: ""
  uptime: "5 weeks, 2 days, 3 hours, 45 minutes"
  version: "15.0(2)SE11,"
