tests/snapshots/validation__cisco_nxos_show_version_malformed_serial.snap
---
source: tests/validation.rs
expression: records
---
- model: Nexus9000 C9396PX
  uptime: "45 days, 12 hours, 30 minutes, 15 seconds"
  serial: "InvalidSerialFormat!@#$"
  version: 9.3(7)
  hostname: NX-Switch1
